[project]
name = "mylex"
version = "0.1.0"
description = "Self-supervised denoising networks."
readme = "README.md"
authors = [
    { name = "Matt Black", email = "matt.black7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bioio>=3.0.0",
    "bioio-nd2>=1.5.0",
    "bioio-tifffile>=1.3.0",
    "calcite",
    "click>=8.2.1",
    "equinox>=0.12.1",
    "jax-metal>=0.1.1 ; sys_platform == 'darwin'",
    "jax[cuda12]>=0.6.1 ; sys_platform == 'linux'",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "optax>=0.2.4",
    "parx",
    "tifffile>=2025.5.26",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "isort>=6.0.1",
    "jupyterlab>=4.4.3",
    "matplotlib-scalebar>=0.9.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings-python>=1.16.10",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "pyupgrade>=3.19.1",
    "typeguard>=4.4.2",
]

[tool.isort]
profile = "black"

[tool.uv.sources]
parx = { git = "https://github.com/matt-black/parx" }
calcite = { git = "https://github.com/matt-black/calcite" }


[project.scripts]
self2self = "mylex.models.self2self:command_line_interface"
self2wave = "mylex.models.self2wave:command_line_interface"
